[gd_scene load_steps=3 format=3 uid="uid://furniture_info_panel"]

[ext_resource type="Script" path="res://entities/ui/FurnitureInfoPanel.gd" id="1_furniture_info"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wegjk"]
bg_color = Color(0.117647, 0.52549, 1, 1)

[node name="FurnitureInfoPanel" type="PanelContainer"]
script = ExtResource("1_furniture_info")
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_right = -20.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wegjk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FurnitureName" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Furniture Name"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="FurnitureInfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/FurnitureInfoContainer"]
layout_mode = 2
text = "Furniture Information:"

[node name="CrewAssignmentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

# Capacity info removed - now shown as visual blocks

# Available crew container removed - no longer needed

[node name="AssignedCrewContainer" type="VBoxContainer" parent="VBoxContainer/CrewAssignmentContainer"]
layout_mode = 2

[node name="AssignedCrewList" type="VBoxContainer" parent="VBoxContainer/CrewAssignmentContainer/AssignedCrewContainer"]
layout_mode = 2
